# sandbox

./: .gitignore  1.py  Json_basic_parse.py  binary_search.py  city_class_var.py  cl_inheritance.py  class_self_init.py  class_sort.py  class_sort_0.py  class_str_by_def.py  cleanup_binary search.py  dev_script.py  div&conq_1.py  emaildb.sqlite  emails.py  friction_log_template.txt  ins_sort_3.py  ins_sort_4.py  insert_sort.py  insertsortredo.py  instructions.py  json_geo.py  json_parse.py  list_comprehension.py  loopy_loop.py  new_list_comprehension.py  new_test.py  newinfobot.html  obj_call_obj.py  onemore.html  pay.py  pay2.py  print.py  qiicksort_2.py  recursion.py  regex.py  roster.py  roster_data.json  smaller.py  sql1.db-journal  (+9 more)
ML/: autopilot_test.py  cippo.py  cippo_2.py  cippo_3.py  document.json  nlp.py  pdf_splitter.py
algos/: 3sum.py  anagramma.py  array_products.py  best_trade.py  bin_search_again.py  biser.py  breakdown.py  breath_first.py  breath_first_2.py  classy_class.py  dict_operations.py  duplicato.py  dutch_flag.py  encode_decode.py  even_and_odd_arrays.py  flowerbeds.py  gcd_stringy.py  group_anagrams.py  ins_sort_3.py  ins_sort_4.py  ins_sort_redoux.py  insert_sort_newshape.py  insert_sort_redo_2.py  insort_again.py  inv_insort.py  longest_chain.py  max_area.py  mergelinkedlists.py  new_binary_search.py  new_duplicate.py  new_even_odd_array.py  one_more.py  pairwise_max.py  pali.py  palindromi.py  parsing_SandP_averages_and_max.py  plus_one.py  quicksort_1.py  random_half.py  rearrange_naive.py  (+10 more)
classes/: basic_class_interaction.py  basic_collections.py  book_library_manager.py  classes.py  experiment_helpers.py  fraction.py  inheritance_test.py  linked_lists.py  more_classes.py  reverse_string.py  stack.py  stringx5.py  test.py
d_bases/: rosterdb.sqlite  sql1.db  sql1.sqbpro
geodata/: geodata.sqlite  where.data  where.js
llms/: apigee_solar_run.py  embeddings.py  model_call.py  one_more_test.py  quick_test.py  (+2 more)
llms/agents/BQ_test_1/: .env.example  README.md  deploy.py  pyproject.toml
llms/agents/BQ_test_1/bq_agent/: __init__.py  agent.py  prompts.py  tools.py
llms/agents/BQ_test_1/bq_agent/.adk/: session.db
llms/agents/agent_eval/gcp_billing_concierge_agent_evals/: add_context.py  custom_verify.py  golden_dataset.json  golden_dataset.md  golden_dataset_gcp.json  golden_dataset_products_only.json  golden_dataset_with_context.json  pyproject.toml  rewrite_dataset.py  run_eval.py
llms/agents/agents_dev_space/demos/demo1/: .env  .gitignore  pyproject.toml  test_vertex.py
llms/agents/agents_dev_space/demos/demo1/agentic_modules/: .py  agent.py  prompts.py  tools.py
llms/agents/agents_dev_space/demos/demo1/agentic_modules/sub_agents/safety_agent/: agent.py  prompts.py
llms/agents/agents_dev_space/demos/demo1/agentic_modules_1/: .py  agent.py  prompts.py  tools.py
llms/agents/agents_dev_space/demos/demo1/agentic_modules_1/sub_agents/safety_agent/: __init__.py  agent.py  prompts.py
llms/agents/workflow_demo/: .env  pyproject.toml  requirements.txt
llms/agents/workflow_demo/demo_agent/: __init__.py  agent.py  get_flags.py  prompts.py  tools.py
llms/agents/workflow_demo/deployment/: deploy.py
(+120 files in other folders)
