[project]
name = "demo_agent"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "demo_agent"
version = "0.1"
license = "Apache-2.0"
description = "Demo Agent"
readme = "README.md"
# --- ADD THIS SECTION ---
include = [".env"]

[tool.poetry.dependencies]
python = "^3.9"
absl-py = "^2.2.1"
diff-match-patch = "^20241021"
google-adk = "^0.5.0"
google-genai = "^1.5.0"
pydantic = "^2.10.6"
requests = "^2.32.4"
tabulate = "^0.9.0"
scikit-learn = "^1.6.1"
google-cloud-aiplatform = { extras = [
  "adk",
  "agent-engines",
], version = "^1.93.0" }
python-dotenv = "^1.1.0"
