[project]
name = "finops_eval"
version = "0.1.0"
description = "Evaluation for FinOps Agent"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "google-cloud-aiplatform[evaluation,reasoningengine]",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
